<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:text="0"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/txtOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="right"
            android:text="0"
            android:textSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnReset"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/reset"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnMod"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/modulus"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btnReset"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnErase"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/erase"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btnMod"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDivide"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/divide"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnErase"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReset"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn2"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btnMod"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btnErase" />

        <Button
            android:id="@+id/btnMultiply"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/multiple"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btn4"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/four"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/five"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn2"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn6"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/six"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn3"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn7"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/seven"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/eight"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@+id/btn5"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn9"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btn0"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/zero"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btn8"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn03"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/zero_3"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

        <Button
            android:id="@+id/btnEqual"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/equal"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn03"
            app:layout_constraintTop_toBottomOf="@+id/btnMin" />

        <Button
            android:id="@+id/btnDot"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/comma"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnMin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/minus"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

        <Button
            android:id="@+id/btnPlus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.2"
            android:backgroundTint="@color/white"
            android:text="@string/plus"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>